# ocp-lrs

./: .gitignore  BuildOptions.cmake  CMakeLists.txt
examples/buck/: build.bat  build.sh  interface.py  interface_debug.py  prog.bat  prog.sh  run.py
examples/cuk/zynq/: UserConfigCpu0.cmake  UserConfigCpu1.cmake  build_all.py  prog.py
examples/fs_buck_boost/posix/: CMakeLists.txt  main.c  ocpConfig.h  run.py
examples/fs_buck_boost/posix/plecs/: lrs_fs_buck_boost.plecs
examples/fs_buck_boost/zynq/: .gitignore  UserConfig.cmake  UserConfigCpu0.cmake  UserConfigCpu1.cmake  build_all.py  fsbb.bif  ocpZynqCpu0.c  ocpZynqCpu0.h  ocp_lrs_defs_cpu1.cmake  ocp_lrs_headers.cmake  ocp_lrs_headers_cpu0.cmake  ocp_lrs_headers_cpu1.cmake  ocp_lrs_sources_cpu0.cmake  ocp_lrs_sources_cpu1.cmake  ocp_sources.cmake  prog.py  run.py
examples/posix/fs_buck_boost/: CMakeLists.txt  main.c  run.py  run_params.json  stypes.h
examples/posix/fs_buck_boost/plecs/: lrs_fs_buck_boost.m  lrs_fs_buck_boost.plecs  lrs_fs_buck_boost.py  make_opil_plecs.mk  makefile  model.py
examples/zynq/: ocpZynqCpu1.c  ocpZynqCpu1.h  zynqConfig.h
lrs_apps/boost/: Buck_Boost_Plat_Signals.txt  Buck_Boost_Pynq_Signals.txt  boostConfig.h  boostControlEnergyInt.c  boostControlEnergyInt.h  boostControlEnergyMpc.c  boostControlEnergyMpc.h  boostControlEnergyc.c  boostControlEnergyc.h  boostControlEnergycint.c  boostControlEnergycint.h  boostController.c  boostController.h  boostHw.c  boostHw.h  boostHwIf.c  boostHwIf.h  boostHwOpil.c  boostHwOpil.h  boostOpil.c  boostOpil.h
lrs_apps/buck/: buckConfig.h  buckControlDisabled.c  buckControlDisabled.h  buckControlIdle.c  buckControlIdle.h  buckControlPlecs.c  buckControlPlecs.h  buckControlRamp.c  buckControlRamp.h  buckControlSfb.c  buckControlSfb.h  buckControlSfbInt.c  buckControlSfbInt.h  buckControlStartup.c  buckControlStartup.h  buckController.c  buckController.h  buckHw.c  buckHw.h  buckHwIf.c  buckHwIf.h  buckOpil.c
lrs_apps/buck/c2000/: buck.c  buck.h  buckHw.c  buckHw.h
lrs_apps/buck/plecs/: Plecs_controller.c  Plecs_controller.h
lrs_apps/cuk/: CMakeLists.txt  cukConfig.h  cukControlCascFblin.c  cukControlCascFblin.h  cukControlEnergy.c  cukControlEnergy.h  cukControlEnergyMpc.c  cukControlEnergyMpc.h  cukControlIdle.c  cukControlIdle.h  cukControlRamp.c  cukControlRamp.h  cukControlSfb.c  cukControlSfb.h  cukController.c  cukController.h  cukHwIf.c  cukHwIf.h  cukHwOpil.c  cukHwOpil.h  cukOpil.c  ocpConfig.h  stypes.h  zynqConfig.h
lrs_apps/cuk/posix/: cuk.c  cuk.h  cukHw.c  cukHw.h
lrs_apps/cuk/zynq/: CMakeLists.txt  Cuk_Pynq_Signals.txt  cuk.c  cukHw.c  ocpZynqCpu0.c  ocpZynqCpu0.h  ocpZynqCpu1.c  ocpZynqCpu1.h  pynq_lrssoc.xsa
lrs_apps/cuk/zynq/cmake/: cpu0_headers.cmake  cpu0_sources.cmake  cpu1_headers.cmake  cpu1_sources.cmake
lrs_apps/cuk/zynq/vivado/: .gitignore  build_hw.tcl  pynq_lrssoc.tcl  readme.txt
lrs_apps/cuk/zynq/vivado/sources/synth_1/: pynq_lrssoc_bd_wrapper.dcp
lrs_apps/fs_buck_boost/: .gitignore  CMakeLists.txt  fsbuckboostConfig.h  fsbuckboostControlBoostEnergy.c  fsbuckboostControlBoostEnergy.h  fsbuckboostControlBoostEnergyMpc.c  fsbuckboostControlBoostEnergyMpc.h  fsbuckboostControlBuckPlecs.c  fsbuckboostControlBuckPlecs.h  fsbuckboostControlBuckSfb.c  fsbuckboostControlBuckSfb.h  fsbuckboostControlCpl.c  fsbuckboostControlCpl.h  fsbuckboostControlIdle.c  fsbuckboostControlIdle.h  fsbuckboostControlPlecs.c  fsbuckboostControlPlecs.h  fsbuckboostControlRamp.c  fsbuckboostControlRamp.h  fsbuckboostController.c  fsbuckboostController.h  fsbuckboostHwIf.c  fsbuckboostHwIf.h  ocpConfig.h
lrs_apps/fs_buck_boost/plecs/: Buck_controller.c  Buck_controller.h  Plecs_controller.c  Plecs_controller.h
lrs_apps/fs_buck_boost/posix/: fsbuckboost.c  fsbuckboost.h  fsbuckboostHw.c  fsbuckboostHw.h
lrs_apps/fs_buck_boost/zynq/: fs_buck_boost_cal.txt  fsbuckboost.c  fsbuckboost.h  fsbuckboostHw.c  fsbuckboostHw.h  ocpZynqCpu0.c  ocpZynqCpu0.h  ocpZynqCpu1.c  pynq_lrssoc.xsa  readme.txt
lrs_apps/fs_buck_boost/zynq/cmake/: cpu0_headers.cmake  cpu0_sources.cmake  cpu1_headers.cmake  cpu1_sources.cmake
lrs_apps/fs_buck_boost/zynq/data/: FS_Buck_Boost_Pynq_Signals.txt  cal.json
lrs_apps/fs_buck_boost/zynq/vivado/: pynq_lrssoc.tcl
lrs_apps/fs_buck_boost/zynq/vivado/sources/pynq-z2/: PYNQ-Z2-v1.0.xdc
plecs_models/: LRS models.plecs
python/: .gitignore  setup.py
python/pyocp_lrs/: __init__.py
python/pyocp_lrs/buck/: __init__.py  controllers.py  hw.py  iface.py  trace.py
python/pyocp_lrs/cuk/: __init__.py  controllers.py  exp.py  hw.py
python/pyocp_lrs/cuk/tb/: __init__.py  common.py  controllers.py  cpl.py  r_load.py
python/pyocp_lrs/fsbuckboost/: __init__.py  boost_tb.py  controllers.py  exp_boost.py  exp_buck.py  hw.py  iface.py  plot.py
python/pyocp_lrs/fsbuckboost/boost_tb/: common.py  r_load.py
python/pyocp_lrs/fsbuckboost/buck_tb/: __init__.py  common.py  r_load.py
python/pyocp_lrs/fsbuckboost/tb/: __init__.py  boost.py  buck.py  common.py  controllers.py  cpl.py  r_load.py
